--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
       "url": "https://github.com/cyberdelia/heroku-geo-buildpack.git"
     },
     {
-      "url": "heroku/python
+      "url": "heroku/python"
     }
   ]
 }
