--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 shapely==1.7.1
-dash_html_components==1.1.1
-numpy==1.19.2
-dash==1.18.1
-plotly==4.14.1
-dash_core_components==1.14.1
+dash==1.19.0
+dash_html_components
+dash_core_components
+numpy==1.21.5
+plotly==5.6.0
+
 Flask==1.1.2
 Flask-Compress==1.8.0
 gunicorn==20.0.4
