--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 shapely==1.7.1
-dash==1.19.0
+dash==2.0.0
 dash_html_components
 dash_core_components
+dash_bootstrap_components
 numpy==1.21.5
 plotly==5.6.0
 werkzeug==2.0.3
