--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ shapely==1.7.1
 dash==2.0.0
 dash_bootstrap_components
 dash_auth==1.4.1
-numpy==1.21.5
+numpy
 plotly==5.6.0
 werkzeug==2.0.3
 Flask==2.1.0
